prvni vlna uprav

--- a/app/AdminModule/templates/Section/@layout.sections.latte
+++ b/app/AdminModule/templates/Section/@layout.sections.latte
@@ -65,6 +65,7 @@
 				<li n:foreach="$imgList as $imgfile">{$imgfile}</li>
 			</ul>
 		</fieldset>
+		<div class="cleaner"></div>
 	</div>
 	<div id="help">
 		<div id="hcontrol">
@@ -85,6 +86,6 @@
 			<p>Do obsahu můžete samozřejmě vkládat jen obrázky dostupné na serveru. Jejich seznam je na této stránce dole. Nový obrázek z počítače nahrajete na server pomocí pole "nahrát nový obrázek na server".<br />Po kliknutí "Uložit" se stránka uloží a vybraný obrázek se nahraje na server.</p>
 		</div>
 	</div>
-
+	<div class="cleaner"></div>
 </body>
 </html>
