--- a/app/components/Packaging.latte
+++ b/app/components/Packaging.latte
@@ -4,26 +4,43 @@
 <div id="refContent" class="packaging">
 	{for $i = 0; $i < 6; $i++}
 		{if ($pack = $packs->fetch())}
-			<div class="packcont" style="left:{3 + $i*161}px; top:1px;"><img id="{$pack->id}" class="ajax" src="{$basePath}/images/packaging/{$pack->file}" alt="{$pack->title}" title="{$pack->title}" /></div>
+			<div class="packcont" style="left:{3 + $i*161}px; top:1px;">
+				<a class="lightbox" href="{$basePath}/images/packaging/{$pack->detail}" title="{$pack->title}">
+					<img id="{$pack->id}" class="" src="{$basePath}/images/packaging/{$pack->file}" alt="{$pack->title}" title="{$pack->title}" />
+				</a>
+			</div>
 		{else break;}
 		{/if}
 	{/for}
 	{for $i = 0; $i < 6; $i++}
 		{if ($pack = $packs->fetch())}
-			<div class="packcont" style="left:{83 + $i*161}px; top:160px;"><img id="{$pack->id}" class="ajax" src="{$basePath}/images/packaging/{$pack->file}" alt="{$pack->title}" title="{$pack->title}" /></div>
+			<div class="packcont" style="left:{83 + $i*161}px; top:160px;">
+				<a class="lightbox" href="{$basePath}/images/packaging/{$pack->detail}" title="{$pack->title}">
+					<img id="{$pack->id}" class="" src="{$basePath}/images/packaging/{$pack->file}" alt="{$pack->title}" title="{$pack->title}" />
+				</a>
+			</div>
 		{else break;}
 		{/if}
 	{/for}
 	{for $i = 0; $i < 6; $i++}
 		{if ($pack = $packs->fetch())}
-			<div class="packcont" style="left:{3 + $i*161}px; top:320px;"><img id="{$pack->id}" class="ajax" src="{$basePath}/images/packaging/{$pack->file}" alt="{$pack->title}" title="{$pack->title}" /></div>
+			<div class="packcont" style="left:{3 + $i*161}px; top:320px;">
+				<a class="lightbox" href="{$basePath}/images/packaging/{$pack->detail}" title="{$pack->title}">
+					<img id="{$pack->id}" class="" src="{$basePath}/images/packaging/{$pack->file}" alt="{$pack->title}" title="{$pack->title}" />
+				</a>
+			</div>
 		{else break;}
 		{/if}
 	{/for}
 	{for $i = 0; $i < 6; $i++}
 		{if ($pack = $packs->fetch())}
-			<div class="packcont" style="left:{83 + $i*161}px; top:479px;"><img id="{$pack->id}" class="ajax" src="{$basePath}/images/packaging/{$pack->file}" alt="{$pack->title}" title="{$pack->title}" /></div>
+			<div class="packcont" style="left:{83 + $i*161}px; top:479px;">
+				<a class="lightbox" href="{$basePath}/images/packaging/{$pack->detail}" title="{$pack->title}">
+					<img id="{$pack->id}" class="" src="{$basePath}/images/packaging/{$pack->file}" alt="{$pack->title}" title="{$pack->title}" />
+				</a>
+			</div>
 		{else break;}
 		{/if}
 	{/for}
+	<div class="cleaner" style="height:{count($packs) / 6 * 159 + 159}px;"></div>
 </div>
