--- a/app/AdminModule/templates/printPoster.default.latte
+++ b/app/AdminModule/templates/printPoster.default.latte
@@ -27,8 +27,8 @@
 	    	<tbody>
 			<tr n:foreach="$itemsList as $item">
 				<td>{$item->title}</td>
-				<td class="ico"><a n:if="!$iterator->isFirst()" class="graphic move_up ajax" id="{$item->id}" n:href="MoveUp! $item->id, $item->order" /></td>
-        		<td class="ico"><a n:if="!$iterator->isLast()" class="graphic move_down ajax" id="{$item->id}" n:href="MoveDown! $item->id, $item->order" /></td>
+				<td class="ico"><a n:if="!$iterator->isFirst()" class="graphic move_up ajax" id="{$item->id}" n:href="MoveDown! $item->id, $item->order" /></td>
+        		<td class="ico"><a n:if="!$iterator->isLast()" class="graphic move_down ajax" id="{$item->id}" n:href="MoveUp! $item->id, $item->order" /></td>
 				<td><input class="ajax" type="checkbox" id="{$item->id}" {if $item->display } checked="checked" {/if} /></td>
 	        	<td class="ico"><a class="graphic edit" id="{$item->id}" n:href="Edit $item->id" /></td>
 	    	    <td class="ico"><a class="graphic delete ajax" id="{$item->id}" n:href="Delete! $item->id" /></td>
