--- a/app/AdminModule/templates/websites.default.latte
+++ b/app/AdminModule/templates/websites.default.latte
@@ -17,7 +17,6 @@
 			<thead>
 	    	<tr>
 				<th>Název</th>
-				<th>Panel</th>
 				<th>nahoru</th>
 	    	    <th>dolů</th>
 				<th>Zobrazit</th>
@@ -28,9 +27,8 @@
 	    	<tbody>
 			<tr n:foreach="$itemsList as $item">
 				<td>{$item->title}</td>
-				<td>{$item->panel}</td>
-				<td class="ico"><a n:if="!($iterator->isFirst() && $item->panel==1)" class="graphic move_up ajax" id="{$item->id}" n:href="MoveUp! $item->id, $item->order, $item->panel" /></td>
-        		<td class="ico"><a n:if="!$iterator->isLast()" class="graphic move_down ajax" id="{$item->id}" n:href="MoveDown! $item->id, $item->order, $item->panel" /></td>
+				<td class="ico"><a n:if="!$iterator->isFirst()" class="graphic move_up ajax" id="{$item->id}" n:href="MoveDown! $item->id, $item->order" /></td>
+        		<td class="ico"><a n:if="!$iterator->isLast()" class="graphic move_down ajax" id="{$item->id}" n:href="MoveUp! $item->id, $item->order" /></td>
 				<td><input class="ajax" type="checkbox" id="{$item->id}" {if $item->display } checked="checked" {/if} /></td>
 	        	<td class="ico"><a class="graphic edit" id="{$item->id}" n:href="Edit $item->id" /></td>
 	    	    <td class="ico"><a class="graphic delete ajax" id="{$item->id}" n:href="Delete! $item->id" /></td>
@@ -54,8 +52,8 @@
 {block hcontent}
 	<h4>Websites</h4>
 	<p>Každá položka "web" je obsažena v jednom souboru png (jpg, gif) o rozměru 300x400 px.<br /> Čb verze(300x200) nahoře a dole stejně velká barevná.</p>
-	<p>Položky mohou být rozděleny do dvou řad (panelů) nad sebou.</p>
-	<p>Nová položka se vždy zařadí do spodního panelu (č.2)</p>
+	<p>Položky se rozdělí do dvou řad nad sebou s tím, že při lichém počtu je v horní řadě o jednu víc.</p>
+	<p>Nová položka se zařadí na první místo.</p>
 	<p>Pořadí upravujeme v tabulce pomocí šipek.</p>
 	<p>K dočasnému skrytí položky z veřejné strany webu stačí odkliknout pole "Zobrazit". Smazání položky by bylo nevratnou akcí.</p>
 {/block}
