--- a/app/AdminModule/templates/websites.edit.latte
+++ b/app/AdminModule/templates/websites.edit.latte
@@ -46,8 +46,8 @@
 {block hcontent}
 	<h4>Websites</h4>
 	<p>Každá položka "Websites" je obsažena v jednom souboru png (jpg, gif) o rozměru 300x400 px.<br /> Čb verze(300x200) nahoře a dole stejně velká barevná.</p>
-	<p>Položky mohou být rozděleny do dvou řad (panelů) nad sebou.</p>
-	<p>Nová položka se vždy zařadí do spodního panelu (č.2)</p>
+	<p>Položky se rozdělí do dvou řad nad sebou s tím, že při lichém počtu je v horní řadě o jednu víc.</p>
+	<p>Nová položka se zařadí na první místo.</p>
 	<p>Pořadí upravujeme v tabulce pomocí šipek.</p>
 	<p>K dočasnému skrytí položky z veřejné strany webu stačí odkliknout pole "Zobrazit". Smazání položky by bylo nevratnou akcí.</p>
 {/block}
