--- a/app/components/Advertising.latte
+++ b/app/components/Advertising.latte
@@ -2,5 +2,9 @@
 <script type="text/javascript" src="{$basePath}/js/advertising.js"></script>
 
 <div id="refContent" class="advertising">
-	<div class="addcont" n:foreach="$adds as $add"><img id="{$add->id}" class="ajax" src="{$basePath}/images/advertising/{$add->file}" alt="{$add->title}" title="{$add->title}" /></div>
+	<div class="addcont" n:foreach="$adds as $add">
+		<a class="lightbox" href="{$basePath}/images/advertising/{$add->detail}" title="{$add->title}">
+			<img id="{$add->id}" class="" src="{$basePath}/images/advertising/{$add->file}" alt="{$add->title}" title="{$add->title}" />
+		</a>
+	</div>
 </div>
