--- a/app/components/PrintPoster.latte
+++ b/app/components/PrintPoster.latte
@@ -2,5 +2,10 @@
 <script type="text/javascript" src="{$basePath}/js/printPoster.js"></script>
 
 <div id="refContent" class="printPoster">
-	<div class="itemcont" n:foreach="$items as $item"><img id="{$item->id}" class="ajax" src="{$basePath}/images/printposter/{$item->file}" alt="{$item->title}" title="{$item->title}" /></div>
+	<div class="itemcont" n:foreach="$items as $item">
+		<a class="lightbox" href="{$basePath}/images/printposter/{$item->detail}" title="{$item->title}">
+			<img id="{$item->id}" class="" src="{$basePath}/images/printposter/{$item->file}" alt="{$item->title}" title="{$item->title}" />
+		</a>
+	</div>
+		
 </div>
