--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,4 +1,47 @@
 
+
+@font-face{
+	font-family: 'museo';
+	src: url('/font/Museo300-Regular-webfont.eot');
+	src: url('/font/Museo300-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo300-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo300-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo300-Regular-webfont.ttf') format('truetype')
+		 /*url('/font/Museo300-Regular-webfont.svg#museo300') format('svg')*/;
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face{
+	font-family: 'museo';
+	src: url('/font/Museo500-Regular-webfont.eot');
+	src: url('/font/Museo500-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo500-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo500-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo500-Regular-webfont.ttf') format('truetype')
+		 /*url('/font/Museo500-Regular-webfont.svg#museo500') format('svg')*/;
+	font-weight: bolder;
+	font-style: normal;
+}
+@font-face{
+	font-family: 'museo';
+	src: url('/font/Museo700-Regular-webfont.eot');
+	src: url('/font/Museo700-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo700-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo700-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo700-Regular-webfont.ttf') format('truetype')
+		 /*url('/font/Museo700-Regular-webfont.svg#museo700') format('svg')*/;
+	font-weight: bold;
+	font-style: normal;
+}
+
+body{
+	font:11px/1.3 "museo", "Trebuchet MS", "Geneva CE", lucida, sans-serif;
+	color:#333;
+	background-color:#000000;
+	margin:0 auto;
+	padding:0px;
+}
+
 .leftside{float:left;}
 .rightside{float:right;}
 .cleaner{clear:both;}
