--- a/app/AdminModule/templates/@layout.admin.latte
+++ b/app/AdminModule/templates/@layout.admin.latte
@@ -20,11 +20,14 @@
 	
 	<link rel="stylesheet" href="{$basePath}/css/styles.css" type="text/css">
     <link rel="stylesheet" href="{$basePath}/css/admin.css" type="text/css">
-	<link rel="shortcut icon" href="{$basePath}/favicon_dast.png" type="image/x-icon">
+	<link rel="shortcut icon" href="{$basePath}/favicon.jpg" type="image/x-icon">
 
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script type="text/javascript" src="{$basePath}/js/scripts.js"></script>
 	<script type="text/javascript" src="{$basePath}/js/ajax.js"></script>
+	
+	<link rel="stylesheet" href="{$basePath}/magnific-popup/magnific-popup.css">
+	<script src="{$basePath}/magnific-popup/jquery.magnific-popup.js"></script>
 
 	{block head}{/block}
 </head>
