--- a/app/AdminModule/templates/printPoster.default.latte
+++ b/app/AdminModule/templates/printPoster.default.latte
@@ -53,6 +53,8 @@
 {block hcontent}
 	<h4>Print & Poster</h4>
 	<p>Každá položka "print&poster" je obsažena v jednom souboru png (jpg, gif) o rozměru 802x300 px.<br /> Čb verze(802x150) nahoře a dole stejně velká barevná.</p>
+	<p>Pokud ma nahled odkazovat na youtube, neni treba vkladat detail obrazku, ale je treba vyplnit odkaz.</p>
+	<p>Odkaz na youtube: musi to byt DLOUHY TYP odkazu (https://www.youtube.com/watch?v=x6zse-fDZC0)</p>
 	<p>Pořadí upravujeme v tabulce pomocí šipek.</p>
 	<p>K dočasnému skrytí položky z veřejné strany webu stačí odkliknout pole "Zobrazit". Smazání položky by bylo nevratnou akcí.</p>
 {/block}
