--- a/app/FrontModule/templates/Reference/@layout.latte
+++ b/app/FrontModule/templates/Reference/@layout.latte
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="{$basePath}/css/styles.css" type="text/css">
 	<link rel="stylesheet" href="{$basePath}/css/shade.css" type="text/css">
     <link rel="stylesheet" href="{$basePath}/css/references.css" type="text/css">
-	<link rel="shortcut icon" href="{$basePath}/favicon_dast.png" type="image/x-icon">
+	<link rel="shortcut icon" href="{$basePath}/favicon.jpg" type="image/x-icon">
 
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="{$basePath}/js/scripts.js"></script>
