--- a/app/components/Packaging.latte
+++ b/app/components/Packaging.latte
@@ -42,5 +42,5 @@
 		{else break;}
 		{/if}
 	{/for}
-	<div class="cleaner" style="height:{count($packs) / 6 * 159 + 159}px;"></div>
+	<div class="cleaner" style="height:{!ceil(count($packs) / 6 * 159 + 159)}px;"></div>
 </div>
