--- a/app/AdminModule/templates/printPoster.edit.latte
+++ b/app/AdminModule/templates/printPoster.edit.latte
@@ -1,5 +1,6 @@
 {block head}
 	<script type="text/javascript" src="{$basePath}/js/netteForms.js"></script>
+	<script type="text/javascript" src="{$basePath}/js/admin_printPoster.js"></script>
 {/block}
 
 {block content}
@@ -19,19 +20,19 @@
 			<table class="edit">
 				<thead>
 				<tr>
-					<th>{label title /}</th>
+					<th>{label title /} / {label link/}</th>
 					<th>{label image /}</th>
 					<th>{label detail /}</th>
 				</tr>
 				</thead>
 				<tbody>
 				<tr>
-					<td>{input title value => $editItem->title}</td>
+					<td rowspan="2">{label title /}<br/>{input title value => $editItem->title} <br/><br/><br/> {label link/}<br/>{input link value => $editItem->link}</td>
 					<td>{input image}</td>
 					<td>{input detail}</td>
 				</tr>
 				<tr>
-					<td class="title">{$editItem->title}</td>
+					{*<td class="title"> $editItem->title</td>*}
 					<td><img id="{$editItem->id}" src="{$basePath}{$path}{$editItem->file}" alt="{$editItem->title}" title="{$editItem->title}" /></td>
 					<td><img src="{$basePath}{$path}{$editItem->detail ? $editItem->detail : 'detail_missing.png'}" alt="not inserted" title="{$editItem->title}" /></td>
 				</tr>
@@ -46,6 +47,8 @@
 {block hcontent}
 	<h4>Print & Poster</h4>
 	<p>Každá položka "print&poster" je obsažena v jednom souboru png (jpg, gif) o rozměru 802x300 px.<br /> Čb verze(802x150) nahoře a dole stejně velká barevná.</p>
+	<p>Pokud ma nahled odkazovat na youtube, neni treba vkladat detail obrazku, ale je treba vyplnit odkaz.</p>
+	<p>Odkaz na youtube: musi to byt DLOUHY TYP odkazu (https://www.youtube.com/watch?v=x6zse-fDZC0)</p>
 	<p>Pořadí upravujeme v tabulce pomocí šipek.</p>
 	<p>K dočasnému skrytí položky z veřejné strany webu stačí odkliknout pole "Zobrazit". Smazání položky by bylo nevratnou akcí.</p>
 {/block}
