--- a/www/css/admin.css
+++ b/www/css/admin.css
@@ -209,7 +209,7 @@ a.delete{
 
 .edit_cont table.edit td.title{
 	color:#A8B400;
-	font-size:24px;
+	font-size:18px;
 	font-weight:bold;
 }
 .edit_cont table.edit label{
@@ -258,7 +258,9 @@ a.delete{
 }
 
 #section{
-	background: url("images/bgd_content.png") repeat scroll left top transparent;
+	/*background:url(images/bgd_content.png) top left repeat;*/
+	background-color:black;
+	background-color:rgba(0,0,0,0.75);
 	position: relative;
 	margin:20px auto 10px;
 	/*height:490px;*/
@@ -267,9 +269,9 @@ a.delete{
 	padding:25px;
 	text-align:left;
 	color:#FFFFFF;
-    font-size:12px;
+    font-size:13px;
 	font-family:"museo", "Trebuchet MS", "Geneva CE", lucida, sans-serif !important;
-	line-height: 1.7;
+	line-height: 1.8;
 }
 
 #tmce{
@@ -277,7 +279,12 @@ a.delete{
 	z-index:4;
 	width:850px;
 	margin:0 auto;
-	background: transparent url("images/bgd_content.png") repeat scroll left top;
+	/*background:url(images/bgd_content.png) top left repeat;*/
+	background-color:black;
+	background-color:rgba(0,0,0,0.75);
+}
+#tmce .buttons{
+	padding:7px 0px;
 }
 #tmce input[type=file]{
 	float:right;
@@ -293,10 +300,11 @@ a.delete{
 #imgList{
 	position:relative;
 	width:850px;
-	margin:0 auto;
-	margin-bottom:30px;
+	margin:10px auto 30px;
 	z-index:5;
-	background: transparent url("images/bgd_content.png") repeat scroll left top;
+	/*background:url(images/bgd_content.png) top left repeat;*/
+	background-color:black;
+	background-color:rgba(0,0,0,0.75);
 }
 #imgList fieldset{
 	float:right;
