--- a/app/AdminModule/templates/identities.default.latte
+++ b/app/AdminModule/templates/identities.default.latte
@@ -44,6 +44,12 @@
 		    <legend>Nahrát nové logo</legend>
     		{control uploadForm}
 		</fieldset>
+		
+		<div class="cleaner"></div>
+		<fieldset id="seoref">
+			<legend>SEO</legend>
+			{control seoForm}
+		</fieldset>
 	</div>
 
 	{snippet identities}
