--- a/app/components/Advertising.latte
+++ b/app/components/Advertising.latte
@@ -4,7 +4,7 @@
 <div id="refContent" class="advertising">
 	<div class="addcont" n:foreach="$adds as $add">
 		<a class="lightbox" href="{$basePath}/images/advertising/{$add->detail}" title="{$add->title}">
-			<img id="{$add->id}" class="" src="{$basePath}/images/advertising/{$add->file}" alt="{$add->title}" title="{$add->title}" />
+			<img id="{$add->id}" class="" src="{$basePath}/images/advertising/{$add->file}" alt="{$add->puretitle}" title="{$add->puretitle}" />
 		</a>
 	</div>
 </div>
