--- a/app/AdminModule/templates/@layout.admin.latte
+++ b/app/AdminModule/templates/@layout.admin.latte
@@ -13,8 +13,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<meta name="description" content="Nette Framework web application skeleton">
-	<meta name="robots" content="{$robots}" n:ifset="$robots">
+	<meta name="description" content="studio shade, brandbuilding and design">
+	<meta name="robots" content="noindex, nofollow">
 
 	<title n:snippet=title>{ifset $title}{$title}{/ifset}</title>
 	
