--- a/app/AdminModule/templates/printPoster.default.latte
+++ b/app/AdminModule/templates/printPoster.default.latte
@@ -41,6 +41,12 @@
 		    <legend>Nahrát nový print&poster</legend>
     		{control uploadForm}
 		</fieldset>
+		
+		<div class="cleaner"></div>
+		<fieldset id="seoref">
+			<legend>SEO</legend>
+			{control seoForm}
+		</fieldset>
 	</div>
 
 	{snippet printPoster}
