--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -12,6 +12,62 @@
 	font-style: normal;
 }
 @font-face{
+	font-family: 'Museo 300';
+	src: url('/font/Museo300-Regular-webfont.eot');
+	src: url('/font/Museo300-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo300-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo300-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo300-Regular-webfont.ttf') format('truetype');
+	font-weight:normal; font-style:normal;
+}
+@font-face{
+	font-family: 'Museo-300';
+	src: url('/font/Museo300-Regular-webfont.eot');
+	src: url('/font/Museo300-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo300-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo300-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo300-Regular-webfont.ttf') format('truetype');
+	font-weight:normal; font-style:normal;
+}
+@font-face{
+	font-family: 'Museo300';
+	src: url('/font/Museo300-Regular-webfont.eot');
+	src: url('/font/Museo300-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo300-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo300-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo300-Regular-webfont.ttf') format('truetype');
+	font-weight:normal; font-style:normal;
+}
+@font-face{
+	font-family: 'museo300';
+	src: url('/font/Museo300-Regular-webfont.eot');
+	src: url('/font/Museo300-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo300-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo300-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo300-Regular-webfont.ttf') format('truetype');
+	font-weight:normal; font-style:normal;
+}
+@font-face{
+	font-family: 'museo-300';
+	src: url('/font/Museo300-Regular-webfont.eot');
+	src: url('/font/Museo300-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo300-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo300-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo300-Regular-webfont.ttf') format('truetype');
+	font-weight:normal; font-style:normal;
+}
+
+@font-face{
+	font-family: 'museo 300';
+	src: url('/font/Museo300-Regular-webfont.eot');
+	src: url('/font/Museo300-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo300-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo300-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo300-Regular-webfont.ttf') format('truetype');
+	font-weight:normal; font-style:normal;
+}
+
+@font-face{
 	font-family: 'museo';
 	src: url('/font/Museo500-Regular-webfont.eot');
 	src: url('/font/Museo500-Regular-webfont.eot?#iefix') format('embedded-opentype'),
@@ -19,9 +75,65 @@
 		 url('/font/Museo500-Regular-webfont.woff') format('woff'),
 		 url('/font/Museo500-Regular-webfont.ttf') format('truetype')
 		 /*url('/font/Museo500-Regular-webfont.svg#museo500') format('svg')*/;
-	font-weight: bolder;
+	font-weight: 500;
 	font-style: normal;
 }
+@font-face{
+	font-family: 'Museo 500';
+	src: url('/font/Museo500-Regular-webfont.eot');
+	src: url('/font/Museo500-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo500-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo500-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo500-Regular-webfont.ttf') format('truetype');
+	font-weight:500; font-style:normal;
+}
+@font-face{
+	font-family: 'Museo-500';
+	src: url('/font/Museo500-Regular-webfont.eot');
+	src: url('/font/Museo500-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo500-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo500-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo500-Regular-webfont.ttf') format('truetype');
+	font-weight:500; font-style:normal;
+}
+@font-face{
+	font-family: 'Museo500';
+	src: url('/font/Museo500-Regular-webfont.eot');
+	src: url('/font/Museo500-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo500-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo500-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo500-Regular-webfont.ttf') format('truetype');
+	font-weight:500; font-style:normal;
+}
+@font-face{
+	font-family: 'museo500';
+	src: url('/font/Museo500-Regular-webfont.eot');
+	src: url('/font/Museo500-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo500-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo500-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo500-Regular-webfont.ttf') format('truetype');
+	font-weight:500; font-style:normal;
+}
+@font-face{
+	font-family: 'museo-500';
+	src: url('/font/Museo500-Regular-webfont.eot');
+	src: url('/font/Museo500-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo500-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo500-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo500-Regular-webfont.ttf') format('truetype');
+	font-weight:500; font-style:normal;
+}
+
+@font-face{
+	font-family: 'museo 500';
+	src: url('/font/Museo500-Regular-webfont.eot');
+	src: url('/font/Museo500-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo500-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo500-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo500-Regular-webfont.ttf') format('truetype');
+	font-weight:500; font-style:normal;
+}
+
 @font-face{
 	font-family: 'museo';
 	src: url('/font/Museo700-Regular-webfont.eot');
@@ -32,6 +144,61 @@
 		 /*url('/font/Museo700-Regular-webfont.svg#museo700') format('svg')*/;
 	font-weight: bold;
 	font-style: normal;
+}
+@font-face{
+	font-family: 'Museo 700';
+	src: url('/font/Museo700-Regular-webfont.eot');
+	src: url('/font/Museo700-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo700-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo700-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo700-Regular-webfont.ttf') format('truetype');
+	font-weight:bold; font-style:normal;
+}
+@font-face{
+	font-family: 'Museo-700';
+	src: url('/font/Museo700-Regular-webfont.eot');
+	src: url('/font/Museo700-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo700-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo700-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo700-Regular-webfont.ttf') format('truetype');
+	font-weight:bold; font-style:normal;
+}
+@font-face{
+	font-family: 'Museo700';
+	src: url('/font/Museo700-Regular-webfont.eot');
+	src: url('/font/Museo700-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo700-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo700-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo700-Regular-webfont.ttf') format('truetype');
+	font-weight:bold; font-style:normal;
+}
+@font-face{
+	font-family: 'museo700';
+	src: url('/font/Museo700-Regular-webfont.eot');
+	src: url('/font/Museo700-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo700-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo700-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo700-Regular-webfont.ttf') format('truetype');
+	font-weight:bold; font-style:normal;
+}
+@font-face{
+	font-family: 'museo-700';
+	src: url('/font/Museo700-Regular-webfont.eot');
+	src: url('/font/Museo700-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo700-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo700-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo700-Regular-webfont.ttf') format('truetype');
+	font-weight:bold; font-style:normal;
+}
+
+@font-face{
+	font-family: 'museo 700';
+	src: url('/font/Museo700-Regular-webfont.eot');
+	src: url('/font/Museo700-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('/font/Museo700-Regular-webfont.woff2') format('woff2'),
+		 url('/font/Museo700-Regular-webfont.woff') format('woff'),
+		 url('/font/Museo700-Regular-webfont.ttf') format('truetype');
+	font-weight:bold; font-style:normal;
 }
 
 body{
@@ -96,4 +263,14 @@ div.flash {
 a[href^="error:"]{
 	background: red;
 	color: white;
+}
+
+.mfp-title a:link,
+.mfp-title a:visited{
+	color:white;
+	text-decoration: underline;
+}
+.mfp-title a:hover{
+	color:#f1f1f1;
+	text-decoration:none;
 }
