social icons menu

--- a/app/FrontModule/templates/@layout.latte
+++ b/app/FrontModule/templates/@layout.latte
@@ -60,6 +60,12 @@
                 {/if}
 		    {/foreach}
             {/snippet}
+			<div class="socialmenu">
+				<a target="_blank" href="https://www.facebook.com/SHADE-Design-by-Slepcoff-428998043963186/"><img src="/images/ico_fb.png" /></a>
+				<a target="_blank" href="https://www.youtube.com/channel/UCDVYW57zw_82jhb6nr5pbmA"><img src="/images/ico_ytb.png" /></a>
+				<a target="_blank" href="https://www.typographicposters.com/oleg-slepcoff/"><img src="/images/ico_tp.png" /></a>
+				<a target="_blank" href=""><img src="/images/ico_be.png" /></a>
+			</div>
 		</div>
 	
 		<div id="shademenu">
